Merge ENGINE-REFACTOR-1: converted new JsonConfigParser map to map values to a ConfigModel